<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_gradient"
    android:paddingHorizontal="40dp"
    android:paddingVertical="40dp"
    >

    <TextView
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

    <EditText
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/etRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email Id"
        android:layout_marginTop="10dp"/>

    <EditText
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/etRegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>


    <EditText
        android:layout_marginBottom="10dp"
        android:id="@+id/etRegPassword"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Min 6 characters"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:layout_marginTop="10dp"/>

    <EditText
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/etRegConfirmPassword"
        android:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:paddingHorizontal="30dp"
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:text="@string/signUp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <TextView
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/tvToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotoLogin"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic" />


</LinearLayout>